<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/animals_images"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ImageViewActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/cat" />


        <RadioButton
            android:id="@+id/shark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/shark" />

        <RadioButton
            android:id="@+id/mouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/mouse" />

        <RadioButton
            android:id="@+id/goat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/goat" />

        <RadioButton
            android:id="@+id/horse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_button_bg"
            android:text="@string/horse" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>